--- a/package.json
+++ b/package.json
@@ -8,32 +8,33 @@
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json",
-    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-    "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore ."
+    "format": "prettier --ignore-path .gitignore --write ."
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^3.0.2",
-    "@tsconfig/svelte": "^5.0.2",
-    "@typescript-eslint/eslint-plugin": "^7.1.0",
-    "@typescript-eslint/parser": "^7.1.0",
-    "autoprefixer": "^10.4.17",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte3": "^4.0.0",
-    "postcss": "^8.4.35",
-    "postcss-load-config": "^5.0.3",
+    "@sveltejs/vite-plugin-svelte": "^3.1.0",
+    "@tsconfig/svelte": "^5.0.4",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
     "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "svelte": "^4.2.12",
-    "svelte-check": "^3.6.6",
-    "svelte-preprocess": "^5.1.3",
-    "tailwindcss": "^3.4.1",
+    "prettier-plugin-svelte": "^3.2.3",
+    "prettier-plugin-tailwindcss": "^0.5.14",
+    "svelte": "5.0.0-next.115",
+    "svelte-check": "^3.7.0",
+    "svelte-preprocess": "^5.1.4",
+    "tailwindcss": "^3.4.3",
     "tslib": "^2.6.2",
-    "typescript": "^5.3.3",
-    "vite": "^5.1.4"
+    "typescript": "^5.4.5",
+    "vite": "^5.2.10"
   },
   "dependencies": {
-    "@fontsource/ubuntu": "^5.0.8",
+    "@fontsource/ubuntu": "^5.0.13",
     "@mdi/js": "^7.4.47"
+  },
+  "prettier": {
+    "plugins": [
+      "prettier-plugin-tailwindcss",
+      "prettier-plugin-svelte"
+    ],
+    "bracketSameLine": true
   }
 }
