--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,8 +1,10 @@
 {
   "compilerOptions": {
     "composite": true,
-    "module": "esnext",
-    "moduleResolution": "node"
+    "skipLibCheck": true,
+    "module": "ESNext",
+    "moduleResolution": "bundler",
+    "strict": true
   },
   "include": ["vite.config.ts"]
 }
