--- a/package.json
+++ b/package.json
@@ -12,15 +12,14 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@tailwindcss/vite": "^4.0.8",
     "@tsconfig/svelte": "^5.0.4",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.5.3",
     "prettier": "^3.5.2",
     "prettier-plugin-svelte": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "svelte": "5.20.2",
     "svelte-check": "^4.1.4",
-    "svelte-preprocess": "^6.0.3",
     "tailwindcss": "^4.0.8",
     "tslib": "^2.8.1",
     "typescript": "^5.7.3",
